Fix layout on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 body {
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Bebas Neue', 'Courier New', Courier, monospace;
 }
 
 @media (prefers-color-scheme: dark) {
